components/config/policies/security/require-run-as-non-root.yaml
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-run-as-non-root
  annotations:
    policies.kyverno.io/title: Require Run As Non-Root
    policies.kyverno.io/category: Pod Security
    policies.kyverno.io/severity: medium
spec:
  validationFailureAction: Audit
  background: true
  rules:
    - name: run-as-non-root
      match:
        any:
          - resources:
              kinds:
                - Pod
      exclude:
        any:
          - resources:
              namespaces:
                - kube-system
      validate:
        message: "Containers must run as non-root. Set securityContext.runAsNonRoot to true."
        pattern:
          spec:
            =(securityContext):
              =(runAsNonRoot): true
            =(ephemeralContainers):
              - =(securityContext):
                  =(runAsNonRoot): true
            =(initContainers):
              - =(securityContext):
                  =(runAsNonRoot): true
            containers:
              - =(securityContext):
                  =(runAsNonRoot): true
